force-app/main/default/objects/RE_Customer_Opps__c/RE_Customer_Opps__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the user Permission details and filter details to query</description>
    <label>RE Customer Opps</label>
</CustomObject>