force-app/main/default/objects/RE_Customer_Opps__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <description>Email Id to send notification based on record status</description>
    <inlineHelpText>Email Id&apos;s with semicolon seperated.</inlineHelpText>
    <label>Email ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>