force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>RE_Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approved</label>
    <type>Checkbox</type>
</CustomField>