force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Condition__c.field-meta.xml
<CustomField>
    <fullName>RE_Condition__c</fullName>
    <description>Filter condition to query</description>
    <inlineHelpText>Filter condition to query</inlineHelpText>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>