force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Email_Templates__c.field-meta.xml
<CustomField>
    <fullName>RE_Email_Templates__c</fullName>
    <label>Email Templates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>