force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Failed__c.field-meta.xml
<CustomField>
    <fullName>RE_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed</label>
    <type>Checkbox</type>
</CustomField>