force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Is_Approver__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approver</label>
    <type>Checkbox</type>
</CustomField>