force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Ready_to_Upload__c.field-meta.xml
<CustomField>
    <fullName>RE_Ready_to_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Upload</label>
    <type>Checkbox</type>
</CustomField>