force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Rejected__c.field-meta.xml
<CustomField>
    <fullName>RE_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the check box to provide Read/write access.Uncheck the Check box to provide Read access</description>
    <inlineHelpText>Check the check box to provide Read/write access.Uncheck the Check box to provide Read access</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>