force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Upload_not_allowed__c.field-meta.xml
<CustomField>
    <fullName>RE_Upload_not_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RE Upload not allowed</label>
    <type>Checkbox</type>
</CustomField>