force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>RE_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded</label>
    <type>Checkbox</type>
</CustomField>