force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_User_Access_Control__c.field-meta.xml
<CustomField>
    <fullName>RE_User_Access_Control__c</fullName>
    <description>access to a record in CO dashboard based on RE Custom Opp Approve status</description>
    <inlineHelpText>Picklist values of RE Custom Opp Approve separated by a semicolon</inlineHelpText>
    <label>User Access Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>