force-app/main/default/objects/RE_Customer_Opps__c/fields/RE_View_Only__c.field-meta.xml
<CustomField>
    <fullName>RE_View_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Only</label>
    <type>Checkbox</type>
</CustomField>