force-app/main/default/objects/RE_Customer_Opps__c/listViews/Access_Info.listView-meta.xml
<ListView>
    <fullName>Access_Info</fullName>
    <columns>NAME</columns>
    <columns>RE_Condition__c</columns>
    <columns>Email_ID__c</columns>
    <columns>RE_User_Access_Control__c</columns>
    <columns>RE_Is_Approver__c</columns>
    <columns>RE_View_Only__c</columns>
    <columns>RE_Email_Templates__c</columns>
    <filterScope>Everything</filterScope>
    <label>Access Info</label>
    <language>en_US</language>
</ListView>